# QtSignalProcessing

./: .gitignore  CMakeLists.txt  README.md  README.txt  SignalProssing.3pre1  SignalProssing.pro  audiohandle.cpp  axislabel.cpp  axislabel.h  cheby1.cpp  cheby1.h  glbase.h  glospectrum.h  glsw.h  iir.cpp  main.cpp  mainwindow.cpp  mainwindow.h  plot.h  plotfilter.cpp  plotfilter.h  qcustomwidgettest.cpp  qcustomwidgettest.h  qwtplot.cpp  qwtplot.h  utilities.cpp
cmake/: FindPhonon.cmake
lib/win32/: fftw3.lib  samplerate.lib
src/: SignalProcessing.pro  audiohandle.cpp  audiohandle.h  axislabel.cpp  axislabel.h  cheby1.cpp  cheby1.h  chebyshevfilter.cpp  chebyshevfilter.h  glbase.cpp  glbase.h  glospectrum.cpp  glospectrum.h  glspectrum.cpp  glspectrum.h  glsw.cpp  glsw.h  glwidgetnew.cpp  glwidgetnew.h  iir.cpp  iir.h  main.cpp  mainwindow.cpp  mainwindow.h  plot.cpp  plotfilter.cpp  plotfilter.h  plotwidget.cpp  plotwidget.h  utilities.cpp  utilities.h
